--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,8 @@
 }
 
 .pear-1 {
-    border-radius: 48% 52% 50% 50% / 69% 68% 32% 31%;
+    /* border-radius: 48% 52% 50% 50% / 69% 68% 32% 31%; */
+    @apply rounded-xl
 }
 
 .spacing {
